--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
 <body>
     <div class="container">
         <div class="scanword-wrap">
-            <div id="scanword">
-
-            </div>
+            <div id="scanword"></div>
         </div>
-        <input type="text" id="inp" autofocus>
     </div>
 </body>
 <script src="/lib/jquery-3.2.1.min.js"></script>
