Words counter and win

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
 <body>
     <div class="container">
+        <div class="counter">
+            <span class="icon-done">✓</span> Разгадано <span id="done"></span> из <span id="total"></span>
+        </div>
         <div class="scanword-wrap">
             <div id="scanword"></div>
         </div>
