--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="scanword-wrap">
             <div id="scanword"></div>
-        </div>
+        </div><input type="text" id="inp" autofocus>
     </div>
 </body>
 <script src="/lib/jquery-3.2.1.min.js"></script>
